Refactor: Update XSD to RAIDES24 (phase 1)
issue: UL-REIT-4198